--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -1,3 +1,6 @@
+body{
+    font-family:'Montserrat'
+}
 input, select {
     width: 90%;
     height: 30%;
@@ -8,6 +11,6 @@ input, select {
 }
 
 input:focus,select:focus {
-    border-color: purple;
+    border-color: #8300A1;
     box-shadow: 0 0 8px rgba(128, 0, 128, 0.3);
 }
