--- a/frontend/src/components/Roleplay/roleplay.css
+++ b/frontend/src/components/Roleplay/roleplay.css
@@ -1,6 +1,7 @@
 .roleplay-container {
-    max-width: 800px;
-    margin: 20px auto;
+    margin-top: 500px;
+    width: 700px;
+    margin: 100px auto;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
