--- a/frontend/src/components/Roleplay/roleplay.css
+++ b/frontend/src/components/Roleplay/roleplay.css
@@ -1,5 +1,8 @@
 .roleplay-container {
-    margin-top: 500px;
+    display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     width: 700px;
     margin: 100px auto;
     padding: 20px;
