--- a/frontend/src/components/newCourseDashbaord/newCourseDashbaord.css
+++ b/frontend/src/components/newCourseDashbaord/newCourseDashbaord.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
 }
 
@@ -101,9 +101,9 @@ body {
 
 .roleplay{
     display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 400px auto;
 }
 
